[gd_scene load_steps=9 format=2]

[ext_resource path="res://Crew/Crew.tscn" type="PackedScene" id=1]
[ext_resource path="res://Chat/Chat.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://SaveTimer.gd" type="Script" id=4]
[ext_resource path="res://Controls.tscn" type="PackedScene" id=5]
[ext_resource path="res://MainScreen.gd" type="Script" id=6]
[ext_resource path="res://Progress Clocks.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameTheme.tres" type="Theme" id=8]

[node name="Game" type="VSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
custom_constants/autohide = 1
split_offset = 450
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainView" type="HSplitContainer" parent="."]
margin_right = 1024.0
margin_bottom = 478.0
size_flags_horizontal = 3
split_offset = 830

[node name="MainScreen" type="MarginContainer" parent="MainView"]
margin_right = 913.0
margin_bottom = 478.0
script = ExtResource( 6 )

[node name="Gameplay" type="PanelContainer" parent="MainView/MainScreen"]
margin_right = 913.0
margin_bottom = 478.0

[node name="Label" type="Label" parent="MainView/MainScreen/Gameplay"]
margin_left = 7.0
margin_top = 232.0
margin_right = 906.0
margin_bottom = 246.0
text = "GAMEPLAY"

[node name="Crew" parent="MainView/MainScreen" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 913.0
margin_bottom = 478.0

[node name="Progress Clocks" parent="MainView/MainScreen" instance=ExtResource( 7 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 913.0
margin_bottom = 478.0

[node name="Controls" parent="MainView" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 925.0
margin_right = 1024.0
margin_bottom = 478.0

[node name="ItemList" parent="MainView/Controls" index="0"]
margin_left = 0.0
margin_top = 0.0
margin_right = 113.0
margin_bottom = 439.0

[node name="Chat" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 490.0
margin_right = 1024.0
margin_bottom = 600.0
main_screen = NodePath("../MainView")

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": "Saves the game at a fixed interval."
}

[connection signal="timeout" from="SaveTimer" to="SaveTimer" method="_on_SaveTimer_timeout"]

[editable path="MainView/Controls"]
